# CES_11

./: .gitignore  README.md
Aula 3/: CMakeLists.txt  Fila.cpp  Fila.h  Pilha.cpp  Pilha.h  main.cpp
LAB1/LAB1.1/: 3.out  4.out  5.out  Lab1.1  Lab1.1.cpp  README.txt
LAB1/LAB1.2/template/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  CMakeLists.txt  README.txt  a.out  list.cpp  list.h  list.h.gch  main  main.cpp
LAB2/: .makefile.swp  1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  CMakeLists.txt  README.txt  a.out  adt_stack.c  adt_stack.h  exec  main.c  makefile
LAB3_Erdos/: main.cpp
LAB_Exame/: .gitignore  CMakeLists.txt  PolishExpr.c  PolishExpr.h  README.md  adt_stack.c  adt_stack.h  atomSet.c  atomSet.h  binTree.c  binTree.h  exec  list.c  list.h  main.c
LAB_Exame/Casos Teste/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  README.txt
Lab3 Erdos/: .gitignore  CMakeLists.txt  author.c  author.h  graph.c  graph.h  graphImplementation.c  graphImplementation.h  list.c  list.h  main.c
WarGameSimulator/: AdtQueue.cpp  AdtQueue.h  CMakeLists.txt  DeckOperators.cpp  DeckOperators.h  GameMode.cpp  GameMode.h  GameMode.h.gch  a.out  main.cpp
